--- a/About_Me.html
+++ b/About_Me.html
@@ -39,6 +39,8 @@
       text-align: center;
       color: #ffcc00;
       font-size: 48px;
+      font-family: times;
+      font-weight: lighter;
       width: auto;
       margin: 5px;
     }
@@ -88,7 +90,7 @@
       <section>
         <div style="display: block;">
           <br>
-          <p class="title">About Me</p>
+          <h1 class="title">About Me</h1>
           <br>
         </div>
       </section>
