--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -39,6 +39,8 @@
       text-align: center;
       color: #ffcc00;
       font-size: 48px;
+      font-family: times;
+      font-weight: lighter;
       width: auto;
       margin: 5px;
     }
@@ -49,10 +51,10 @@
       border: 2px solid #ffcc00;
       border-radius: 10px;
       box-shadow: 0px 5px 5px 2px;
-      padding: 10px;
+      padding: 5px;
       margin: auto;
       width: 400px;
-      diplay: inline-block;
+      display: block;
     }
 
     #comment {
@@ -65,7 +67,7 @@
       margin: auto;
       width: 400px;
       height: 300px;
-      diplay: inline-block;
+      display: block;
     }
 
     #section2 {
@@ -116,20 +118,22 @@
               </li>
             </ul>
         </nav>
+    </header>
 
         <main>
           <section>
             <div style="display: block;">
               <br>
-              <p class="title">Contact</p>
+              <h1 class="title">Contact</h1>
 
-              <p style="
+              <h3 style="
               color: white;
               text-align: center;
+              font-weight: lighter;
               ">
                 Message me with any questions, comments, or requests. I would love to share my
                 passion with you!
-              </p>
+              </h3>
             </div>
           </section>
 
@@ -137,23 +141,21 @@
 
           <section id="section2">
             <div class="text_boxes">
-              Name
+              <h3>Name</h3>
             </div>
             <br><br><br>
             <div class="text_boxes">
-              Email
+              <h3>Email</h3>
             </div>
             <br><br><br>
             <div class="text_boxes">
-              Phone #
+              <h3>Phone</h3>
             </div>
             <br><br><br>
             <div id="comment">
-              Comment
+              <h3>Comment</h3>
             </div>
           </section>
         </main>
-    </header>
-
   </body>
 </html>
