--- a/HomeIllustrator.html
+++ b/HomeIllustrator.html
@@ -156,99 +156,97 @@
       </h2>
       <br>
 
-      <div style="
-      border: 2px solid #ffcc00;
-      background-color: #232328;
-      text-align: center;
-      ">
+        <div style="
+        border: 2px solid #ffcc00;
+        background-color: #232328;
+        text-align: center;">
 
-        <ul class="gallery_pages">
-          <li class="page_list">
-            <a href="index.html" style="text-decoration: none; color: white;">
-            Zodiac Project
-            </a>
-          </li>
-          <li class="page_list" id="selected">Illustrator</li>
-          <li class="page_list">
-            <a href="HomePhotoshop.html" style="text-decoration: none; color: white;">
-            Photoshop
-            </a>
-          </li>
-          <li class="page_list">
-            <a href="HomeIndesign.html" style="text-decoration: none; color: white;">
-            InDesign
-            </a>
-          </li>
-        </ul>
+          <ul class="gallery_pages">
+            <li class="page_list">
+              <a href="index.html" style="text-decoration: none; color: white;">
+              Zodiac Project
+              </a>
+            </li>
+            <li class="page_list" id="selected">Illustrator</li>
+            <li class="page_list">
+              <a href="HomePhotoshop.html" style="text-decoration: none; color: white;">
+              Photoshop
+              </a>
+            </li>
+            <li class="page_list">
+              <a href="HomeIndesign.html" style="text-decoration: none; color: white;">
+              InDesign
+              </a>
+            </li>
+          </ul>
 
-        <ul class="image_grid">
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Illustrator/SusansKitchen.jpg" alt="Restaurant Ad">
-          </li>
+          <ul class="image_grid">
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Illustrator/SusansKitchen.jpg" alt="Restaurant Ad">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Illustrator/Spider-man.jpg" alt="Spiderverse Poster">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Illustrator/Spider-man.jpg" alt="Spiderverse Poster">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Illustrator/Wishtree.jpg" alt="Wishtree Book">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Illustrator/Wishtree.jpg" alt="Wishtree Book">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Illustrator/GA_Flyer.jpg" alt="Brand Flyer">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Illustrator/GA_Flyer.jpg" alt="Brand Flyer">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Illustrator/FreshProduce.jpg" alt="Produce Ad">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Illustrator/FreshProduce.jpg" alt="Produce Ad">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 200px;
-            box-shadow: none;"
-            src="images/Illustrator/FreshProduce_Logo.png" alt="Produce Logo">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 200px;
+              box-shadow: none;"
+              src="images/Illustrator/FreshProduce_Logo.png" alt="Produce Logo">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 200px;
-            box-shadow: none;"
-            src="images/Illustrator/WoC_Logo.png" alt="Event Logo">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 200px;
+              box-shadow: none;"
+              src="images/Illustrator/WoC_Logo.png" alt="Event Logo">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 200px;
-            box-shadow: none;"
-            src="images/Illustrator/NeoFit.png" alt="NeoFit Logo">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 200px;
+              box-shadow: none;"
+              src="images/Illustrator/NeoFit.png" alt="NeoFit Logo">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 200px;
-            box-shadow: none;"
-            src="images/Illustrator/ClaireDavis.png" alt="ClaireDavis Logo">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 200px;
+              box-shadow: none;"
+              src="images/Illustrator/ClaireDavis.png" alt="ClaireDavis Logo">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 200px;
-            box-shadow: none;"
-            src="images/Illustrator/Rebound.png" alt="Rebound Logo">
-          </li>
-
-        </ul>
-
+            <li class="grid_image">
+              <img class="image" style="
+              height: 200px;
+              box-shadow: none;"
+              src="images/Illustrator/Rebound.png" alt="Rebound Logo">
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
   </body>
