--- a/HomeIndesign.html
+++ b/HomeIndesign.html
@@ -159,57 +159,55 @@
       <div style="
       border: 2px solid #ffcc00;
       background-color: #232328;
-      text-align: center;
-      ">
+      text-align: center;">
 
-        <ul class="gallery_pages">
-          <li class="page_list">
-            <a href="index.html" style="text-decoration: none; color: white;">
-            Zodiac Project
-            </a>
-          </li>
-          <li class="page_list">Illustrator</li>
-          <li class="page_list">
-            <a href="HomePhotoshop.html" style="text-decoration: none; color: white;">
-            Photoshop
-            </a>
-          </li>
-          <li class="page_list" id="selected">InDesign</li>
-        </ul>
+          <ul class="gallery_pages">
+            <li class="page_list">
+              <a href="index.html" style="text-decoration: none; color: white;">
+              Zodiac Project
+              </a>
+            </li>
+            <li class="page_list">Illustrator</li>
+            <li class="page_list">
+              <a href="HomePhotoshop.html" style="text-decoration: none; color: white;">
+              Photoshop
+              </a>
+            </li>
+            <li class="page_list" id="selected">InDesign</li>
+          </ul>
 
-        <ul class="image_grid">
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/InDesign/FlavorsPizza.jpg" alt="Two-Page Spread">
-          </li>
+          <ul class="image_grid">
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/InDesign/FlavorsPizza.jpg" alt="Two-Page Spread">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/InDesign/Summerwear.jpg" alt="Summer Catalogue">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/InDesign/Summerwear.jpg" alt="Summer Catalogue">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/InDesign/ModernTouch.jpg" alt="Furniture Catalogue">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/InDesign/ModernTouch.jpg" alt="Furniture Catalogue">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/InDesign/First_Brochure1.jpg" alt="First Institute Brochure">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/InDesign/First_Brochure1.jpg" alt="First Institute Brochure">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/InDesign/First_Brochure2.jpg" alt="First Institute Brochure">
-          </li>
-
-        </ul>
-
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/InDesign/First_Brochure2.jpg" alt="First Institute Brochure">
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
   </body>
