--- a/HomePhotoshop.html
+++ b/HomePhotoshop.html
@@ -159,61 +159,59 @@
       <div style="
       border: 2px solid #ffcc00;
       background-color: #232328;
-      text-align: center;
-      ">
+      text-align: center;">
 
-        <ul class="gallery_pages">
-          <li class="page_list">
-            <a href="index.html" style="text-decoration: none; color: white;">
-            Zodiac Project
-            </a>
-          </li>
-          <li class="page_list">
-            <a href="HomeIllustrator.html" style="text-decoration: none; color: white;">
-            Illustrator
-            </a>
-          </li>
-          <li class="page_list" id="selected">Photoshop</li>
-          <li class="page_list">
-            <a href="HomeIndesign.html" style="text-decoration: none; color: white;">
-            InDesign
-            </a>
-          </li>
-        </ul>
+          <ul class="gallery_pages">
+            <li class="page_list">
+              <a href="index.html" style="text-decoration: none; color: white;">
+              Zodiac Project
+              </a>
+            </li>
+            <li class="page_list">
+              <a href="HomeIllustrator.html" style="text-decoration: none; color: white;">
+              Illustrator
+              </a>
+            </li>
+            <li class="page_list" id="selected">Photoshop</li>
+            <li class="page_list">
+              <a href="HomeIndesign.html" style="text-decoration: none; color: white;">
+              InDesign
+              </a>
+            </li>
+          </ul>
 
-        <ul class="image_grid">
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Photoshop/Little_Explorer.jpg" alt="Pisces Art">
-          </li>
+          <ul class="image_grid">
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Photoshop/Little_Explorer.jpg" alt="Pisces Art">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Photoshop/Lava_DoubleExposure.jpg" alt="Aries Art">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Photoshop/Lava_DoubleExposure.jpg" alt="Aries Art">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Photoshop/Smoothie_Mockup.jpg" alt="Taurus Art">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Photoshop/Smoothie_Mockup.jpg" alt="Taurus Art">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Photoshop/Black_Adam_P1.jpg" alt="Gemini Art">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Photoshop/Black_Adam_P1.jpg" alt="Gemini Art">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Photoshop/Black_Adam_P2.jpg" alt="Cancer Art">
-          </li>
-
-        </ul>
-
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Photoshop/Black_Adam_P2.jpg" alt="Cancer Art">
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
   </body>
