--- a/index.html
+++ b/index.html
@@ -124,120 +124,117 @@
     <main>
       <section>
         <br><br><br>
-      <!-- Logo -->
-      <img src="Gemini_Artworks_Icon2.png" alt="Gemini Artworks Logo"
-      style="
-      height: 400px;
-      display: block;
-      margin: auto;
-      ">
-      <br><br><br>
-
-      <div id="I_Block">
-        <h1 style="
-        padding-top: 20px;
-        padding-left: 20px;
-        padding-right: 20px;
-        text-align: center;
-        color: white;
-        font-size: 20px;
-        font-family: times;
+        <!-- Logo -->
+        <img src="Gemini_Artworks_Icon2.png" alt="Gemini Artworks Logo"
+        style="
+        height: 400px;
+        display: block;
+        margin: auto;
         ">
-          Hey, John here!
-        </h1>
+        <br><br><br>
 
-        <p style="
-        padding-bottom: 20px;
-        padding-left: 20px;
-        padding-right: 20px;
-        text-align: center;
-        color: white;
-        font-size: 14px;
-        font-family: helveticaneue;
-        ">
-          I am a newly introduced graphic designer with a good amount of experience
-          in fine arts and digital art. As of now, I have found interest in more than one
-          type of art, but most of my work comes from the digital technique as I explore
-          the world of astrology as the main theme for my services.
-        </p>
-      </div>
+        <div id="I_Block">
+          <h1 style="
+          padding-top: 20px;
+          padding-left: 20px;
+          padding-right: 20px;
+          text-align: center;
+          color: white;
+          font-size: 20px;
+          font-family: times;
+          ">
+            Hey, John here!
+          </h1>
 
-      <br>
-      <h2 style="text-align: center; color: white;">
-        Work Examples
-      </h2>
-      <br>
+          <p style="
+          padding-bottom: 20px;
+          padding-left: 20px;
+          padding-right: 20px;
+          text-align: center;
+          color: white;
+          font-size: 14px;
+          font-family: helveticaneue;
+          ">
+            I am a newly introduced graphic designer with a good amount of experience
+            in fine arts and digital art. As of now, I have found interest in more than one
+            type of art, but most of my work comes from the digital technique as I explore
+            the world of astrology as the main theme for my services.
+          </p>
+        </div>
 
-      <div style="
-      border: 2px solid #ffcc00;
-      background-color: #232328;
-      text-align: center;
-      ">
+        <br>
+        <h2 style="text-align: center; color: white;">
+          Work Examples
+        </h2>
+        <br>
 
-        <ul class="gallery_pages">
-          <li class="page_list" id="selected">Zodiac Project</li>
-          <li class="page_list">
-            <a href="HomeIllustrator.html" style="text-decoration: none; color: white;">
-            Illustrator
-            </a>
-          </li>
-          <li class="page_list">
-            <a href="HomePhotoshop.html" style="text-decoration: none; color: white;">
-            Photoshop
-            </a>
-          </li>
-          <li class="page_list">
-            <a href="HomeIndesign.html" style="text-decoration: none; color: white;">
-            InDesign
-            </a>
-          </li>
-        </ul>
+        <div style="
+        border: 2px solid #ffcc00;
+        background-color: #232328;
+        text-align: center;">
+          <ul class="gallery_pages">
+            <li class="page_list" id="selected">Zodiac Project</li>
+            <li class="page_list">
+              <a href="HomeIllustrator.html" style="text-decoration: none; color: white;">
+              Illustrator
+              </a>
+            </li>
+            <li class="page_list">
+              <a href="HomePhotoshop.html" style="text-decoration: none; color: white;">
+              Photoshop
+              </a>
+            </li>
+            <li class="page_list">
+              <a href="HomeIndesign.html" style="text-decoration: none; color: white;">
+              InDesign
+              </a>
+            </li>
+          </ul>
 
-        <ul class="image_grid">
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Pisces.jpg" alt="Pisces Art">
-          </li>
+          <ul class="image_grid">
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Pisces.jpg" alt="Pisces Art">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Aries.jpg" alt="Aries Art">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Aries.jpg" alt="Aries Art">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Taurus.jpg" alt="Taurus Art">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Taurus.jpg" alt="Taurus Art">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Gemini.jpg" alt="Gemini Art">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Gemini.jpg" alt="Gemini Art">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Cancer.jpg" alt="Cancer Art">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Cancer.jpg" alt="Cancer Art">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Leo.jpg" alt="Leo Art">
-          </li>
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Leo.jpg" alt="Leo Art">
+            </li>
 
-          <li class="grid_image">
-            <img class="image" style="
-            height: 400px"
-            src="images/Virgo.jpg" alt="Leo Art">
-          </li>
-
-        </ul>
-
+            <li class="grid_image">
+              <img class="image" style="
+              height: 400px"
+              src="images/Virgo.JPG" alt="Virgo Art">
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
   </body>
