--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Gemini Artworks Contac</title>
+    <title>Gemini Artworks Contact</title>
 
     <style>
     #nav_bar ul {
