--- a/assignments/assignment10.html
+++ b/assignments/assignment10.html
@@ -16,7 +16,8 @@
         background-color: skyblue;
       }
       #Col1 {
-        background-color: lightgrey;
+        background-color: grey;
+        color: white;
       }
     </style>
   </head>
