--- a/About_Me.html
+++ b/About_Me.html
@@ -9,6 +9,7 @@
       background: #232328;
       box-shadow: 0px 5px 0px 0px rgba(153, 51, 153, 1);
       padding-inline-start: 0px;
+      font-size: 20px;
     }
 
     #nav_bar ul li {
@@ -22,8 +23,8 @@
 
     #logo {
       color: #ffcc00;
-      position: absolute;
-      display: block;
+      display: inline-block;
+      padding-left: 20px;
     }
 
     .right_link {
@@ -66,13 +67,13 @@
     <header>
         <nav id="nav_bar">
             <ul>
+              <div id="logo">
+                Gemini Artworks
+              </div>
               <li class="left_link">
                 <a href="index.html" style="text-decoration: none; color: white;">
                 Home
                 </a>
-              </li>
-              <li id="logo">
-                Gemini Artworks
               </li>
               <li class="right_link" id="current">
                 About Me
