--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -9,6 +9,7 @@
       background: #232328;
       box-shadow: 0px 5px 0px 0px rgba(153, 51, 153, 1);
       padding-inline-start: 0px;
+      font-size: 20px;
     }
 
     #nav_bar ul li {
@@ -22,8 +23,8 @@
 
     #logo {
       color: #ffcc00;
-      position: absolute;
-      display: block;
+      display: inline-block;
+      padding-left: 20px;
     }
 
     .right_link {
@@ -48,35 +49,43 @@
     .text_boxes {
       text-align: left;
       background-color: white;
-      border: 2px solid #ffcc00;
+      border: 1px solid #ffcc00;
       border-radius: 10px;
       box-shadow: 0px 5px 5px 2px;
-      padding: 5px;
-      margin: auto;
+      padding-left: 10px;
       width: 400px;
       display: block;
+      font-size: 14px;
+    }
+
+    #section2 ul li:hover {
+      opacity: 50%;
     }
 
     #comment {
       text-align: left;
       background-color: white;
-      border: 2px solid #ffcc00;
+      border: 1px solid #ffcc00;
       border-radius: 10px;
       box-shadow: 0px 5px 5px 2px;
-      padding: 10px;
-      margin: auto;
+      padding-left: 10px;
       width: 400px;
-      height: 300px;
+      height: 200px;
       display: block;
+      font-size: 14px;
     }
 
     #section2 {
       background: #232328;
       margin: auto;
       border-radius: 20px;
-      padding: 100px;
-      width: 800px;
+      padding: 80px;
+      width: 600px;
       display: block;
+    }
+
+    #section2 ul li {
+      margin: auto;
     }
 
     main {
@@ -100,13 +109,13 @@
     <header>
         <nav id="nav_bar">
             <ul>
+              <div id="logo">
+                Gemini Artworks
+              </div>
               <li class="left_link">
                 <a href="index.html" style="text-decoration: none; color: white;">
                 Home
                 </a>
-              </li>
-              <li id="logo">
-                Gemini Artworks
               </li>
               <li class="right_link">
                 <a href="About_Me.html" style="text-decoration: none; color: white;">
@@ -137,24 +146,26 @@
             </div>
           </section>
 
-          <br><br>
+          <br>
 
           <section id="section2">
-            <div class="text_boxes">
-              <h3>Name</h3>
-            </div>
-            <br><br><br>
-            <div class="text_boxes">
-              <h3>Email</h3>
-            </div>
-            <br><br><br>
-            <div class="text_boxes">
-              <h3>Phone</h3>
-            </div>
-            <br><br><br>
-            <div id="comment">
-              <h3>Comment</h3>
-            </div>
+            <ul>
+              <li class="text_boxes">
+                <p>Name</p>
+              </li>
+              <br><br><br>
+              <li class="text_boxes">
+                <p>Email</p>
+              </li>
+              <br><br><br>
+              <li class="text_boxes">
+                <p>Phone</p>
+              </li>
+              <br><br><br>
+              <li id="comment">
+                <p>Comment</p>
+              </li>
+            </ul>
           </section>
         </main>
   </body>
