--- a/HomeIllustrator.html
+++ b/HomeIllustrator.html
@@ -29,14 +29,18 @@
         list-style: outside none none;
       }
 
+      #current {
+        color: #ffcc00;
+      }
+
       .left_link {
         list-style-type: none;
       }
 
       #logo {
         color: #ffcc00;
-        position: absolute;
-        display: block;
+        display: inline-block;
+        padding-left: 20px;
       }
 
       .right_link {
@@ -63,14 +67,15 @@
 
       #I_Block {
         background: #232328;
-        box-shadow: 0px 5px 0px 0px rgba(0, 153, 153, 1);
+        box-shadow: 0px 2px 0px 0px rgba(0, 153, 153, 1);
       }
 
       #nav_bar ul {
         color: white;
         background: #232328;
-        box-shadow: 0px 5px 0px 0px rgba(153, 51, 153, 1);
+        box-shadow: 0px 2px 0px 0px rgba(153, 51, 153, 1);
         padding-inline-start: 0px;
+        font-size: 20px;
       }
 
       #nav_bar ul li {
@@ -99,12 +104,20 @@
     <header>
         <nav id="nav_bar">
             <ul>
-              <li class="left_link">Home</li>
-              <li id="logo">
+              <div id="logo">
                 Gemini Artworks
+              </div>
+              <li class="left_link" id="current">Home</li>
+              <li class="right_link">
+                <a href="About_Me.html" style="text-decoration: none; color: white;">
+                About Me
+                </a>
               </li>
-              <li class="right_link">About Me</li>
-              <li class="right_link">Contact</li>
+              <li class="right_link">
+                <a href="Contact_Page.html" style="text-decoration: none; color: white;">
+                Contact
+                </a>
+              </li>
             </ul>
         </nav>
     </header>
@@ -122,7 +135,7 @@
       <br><br><br>
 
       <div id="I_Block">
-        <h1 style="
+        <h2 style="
         padding-top: 20px;
         padding-left: 20px;
         padding-right: 20px;
@@ -132,7 +145,7 @@
         font-family: times;
         ">
           Hey, John here!
-        </h1>
+        </h2>
 
         <p style="
         padding-bottom: 20px;
