--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
       #logo {
         color: #ffcc00;
-        position: absolute;
-        display: block;
+        display: inline-block;
+        padding-left: 20px;
       }
 
       .right_link {
@@ -67,14 +67,15 @@
 
       #I_Block {
         background: #232328;
-        box-shadow: 0px 5px 0px 0px rgba(0, 153, 153, 1);
+        box-shadow: 0px 2px 0px 0px rgba(0, 153, 153, 1);
       }
 
       #nav_bar ul {
         color: white;
         background: #232328;
-        box-shadow: 0px 5px 0px 0px rgba(153, 51, 153, 1);
+        box-shadow: 0px 2px 0px 0px rgba(153, 51, 153, 1);
         padding-inline-start: 0px;
+        font-size: 20px;
       }
 
       #nav_bar ul li {
@@ -103,10 +104,10 @@
     <header>
         <nav id="nav_bar">
             <ul>
-              <li class="left_link" id="current">Home</li>
-              <li id="logo">
+              <div id="logo">
                 Gemini Artworks
-              </li>
+              </div>
+              <li class="left_link" id="current">Home</li>
               <li class="right_link">
                 <a href="About_Me.html" style="text-decoration: none; color: white;">
                 About Me
@@ -134,7 +135,7 @@
         <br><br><br>
 
         <div id="I_Block">
-          <h1 style="
+          <h2 style="
           padding-top: 20px;
           padding-left: 20px;
           padding-right: 20px;
@@ -144,7 +145,7 @@
           font-family: times;
           ">
             Hey, John here!
-          </h1>
+          </h2>
 
           <p style="
           padding-bottom: 20px;
