--- a/HomeIllustrator.html
+++ b/HomeIllustrator.html
@@ -83,6 +83,12 @@
         padding: 12px 24px;
       }
 
+      #nav_bar {
+        position: fixed;
+        z-index: 5;
+        width: 100%;
+      }
+
       main {
         font-family: times;
       }
@@ -125,12 +131,14 @@
     <main>
       <section>
         <br><br><br>
+        
       <!-- Logo -->
       <img src="Gemini_Artworks_Icon2.png" alt="Gemini Artworks Logo"
       style="
       height: 400px;
       display: block;
       margin: auto;
+      padding-top: 60px;
       ">
       <br><br><br>
 
