--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
         padding: 12px 24px;
       }
 
+      #nav_bar {
+        position: fixed;
+        z-index: 5;
+        width: 100%;
+      }
+
       main {
         font-family: times;
       }
@@ -131,6 +137,7 @@
         height: 400px;
         display: block;
         margin: auto;
+        padding-top: 60px;
         ">
         <br><br><br>
 
