--- a/About_Me.html
+++ b/About_Me.html
@@ -17,6 +17,12 @@
       padding: 12px 24px;
     }
 
+    #nav_bar {
+      position: fixed;
+      z-index: 5;
+      width: 100%;
+    }
+
     .left_link {
       list-style-type: none;
     }
@@ -42,8 +48,29 @@
       font-size: 48px;
       font-family: times;
       font-weight: lighter;
-      width: auto;
-      margin: 5px;
+      margin: auto;
+      padding-top: 60px;
+    }
+
+    .Para_card {
+      background-color: #232328;
+      border: 1px solid #ffcc00;
+      color: white;
+      font-size: 14px;
+      width: 25%;
+      height: 500px;
+      padding: 20px;
+      margin: 40px;
+    }
+
+    .cardTitle {
+      font-weight: 200;
+      font-size: 24px;
+    }
+
+    #about_cards {
+      margin: auto;
+      display: inline;
     }
 
     main {
@@ -85,14 +112,56 @@
               </li>
             </ul>
         </nav>
+        <br><br><br><br>
+        <h1 class="title">About Me</h1>
     </header>
 
     <main>
-      <section>
-        <div style="display: block;">
-          <br>
-          <h1 class="title">About Me</h1>
-          <br>
+      <section id="about_cards">
+        <div class="Para_card" id="Card1">
+          <h2 class="cardTitle">Moon</h2>
+          <hr>
+          <p style="padding: 10px">
+            Design and illustration for me started in the last moments of elementary school.
+            It was after 5th grade that I began honing into my creativity. When I started
+            taking the path seriously in 6th grade, I was mostly known for recreational art,
+            which in a sense is just being able to copy features or design elements which is
+            how most artists start their journey. I took after my dad, who used to draw
+            beautiful sketches of vehicles like planes or cars. He would even draw without
+            reference. So, throughout the my first year of middle school, I strived for a pro level
+            of understanding in the field of art.
+          </p>
+        </div>
+
+        <div class="Para_card" id="Card2">
+          <h2 class="cardTitle">Rising</h2>
+          <hr>
+          <p style="padding: 10px">
+            After finishing my first year of middle school, I decided to take on an art class
+            where I will eventually meet my first professional artist as inspiration. throughout
+            the class, I was taught to add and keep adding until I am satisfied with the final
+            product. The one thing I have learned and will never forget, is the phrase; "an
+            artist's work is never finished". Every day since that art class, I have practiced over
+            and over again to expand my creativity and improve on my attention to detail.
+            <br><br>
+            Fast forwarding to junior year in highschool, I have already practiced for about 3 years
+            with an unfortunate block during my sophomore year. Soon after finding inspiration again,
+            I managed to skip the beginner's art course for the school and straight into the 2nd level
+            course where I will have found one of the greatest teachers to have taught me.
+          </p>
+        </div>
+
+        <div class="Para_card" id="Card3">
+          <h2 class="cardTitle">Sun</h2>
+          <hr>
+          <p style="padding: 10px">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+            eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
+            in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
         </div>
       </section>
     </main>
