--- a/HomeIndesign.html
+++ b/HomeIndesign.html
@@ -76,13 +76,17 @@
         box-shadow: 0px 2px 0px 0px rgba(153, 51, 153, 1);
         padding-inline-start: 0px;
         font-size: 20px;
-        position: fixed;
-        z-index: 5;
       }
 
       #nav_bar ul li {
         display: inline-block;
         padding: 12px 24px;
+      }
+
+      #nav_bar {
+        position: fixed;
+        z-index: 5;
+        width: 100%;
       }
 
       main {
@@ -127,12 +131,14 @@
     <main>
       <section>
         <br><br><br>
+
       <!-- Logo -->
       <img src="Gemini_Artworks_Icon2.png" alt="Gemini Artworks Logo"
       style="
       height: 400px;
       display: block;
       margin: auto;
+      padding-top: 60px;
       ">
       <br><br><br>
 
@@ -182,7 +188,11 @@
               Zodiac Project
               </a>
             </li>
-            <li class="page_list">Illustrator</li>
+            <li class="page_list">
+              <a href="HomeIllustrator.html" style="text-decoration: none; color: white;">
+              Illustrator
+              </a>
+            </li>
             <li class="page_list">
               <a href="HomePhotoshop.html" style="text-decoration: none; color: white;">
               Photoshop
