--- a/assignments/assignment11.html
+++ b/assignments/assignment11.html
@@ -12,12 +12,42 @@
         width: 150px;
       }
 
+      #flex_small2 img {
+        height: 150px;
+        width: 200px;
+      }
+
       #flex_big img {
         height: 600px;
         width: 500px;
       }
 
-      .flex-child img {
+      #flex_big2 img {
+        height: 600px;
+        width: 700px;
+      }
+
+      #flex_small3 img {
+        height: 200px;
+        width: 150px;
+      }
+
+      #flex_small4 img {
+        height: 150px;
+        width: 200px;
+      }
+
+      #flex_big3 img {
+        height: 600px;
+        width: 500px;
+      }
+
+      #flex_big4 img {
+        height: 600px;
+        width: 700px;
+      }
+
+      .flex-child1 img {
         border: 2px solid gold;
         background-color: white;
         border-radius: 4px;
@@ -27,7 +57,7 @@
         width: 400px;
       }
 
-      .flex_container {
+      .flex_container1 {
         background-color: #232328;
         display: flex;
         flex-direction: row;
@@ -35,20 +65,122 @@
         justify-content: space-between;
         align-items: center;
       }
+
+      .flex_child2 img {
+        border: 2px solid black;
+        background-color: white;
+        border-radius: 4px;
+        height: 500px;
+        margin: 10px;
+        padding: 8px 8px;
+        width: 400px;
+      }
+
+      .flex_container2 {
+        background-color: #ffcc00;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap-reverse;
+        justify-content: space-evenly;
+        align-items: flex-end;
+      }
+
+      .flex_child3 img {
+        border: 2px solid black;
+        background-color: white;
+        border-radius: 4px;
+        height: 500px;
+        margin: 10px;
+        padding: 8px 8px;
+        width: 400px;
+      }
+
+      .flex_container3 {
+        background-color: #ffcc00;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-start;
+      }
+
+      .flex_child4 img {
+        border: 2px solid black;
+        background-color: white;
+        border-radius: 4px;
+        height: 500px;
+        margin: 10px;
+        padding: 8px 8px;
+        width: 400px;
+      }
+
+      .flex_container4 {
+        background-color: #232328;
+        display: flex;
+        flex-direction: row-reverse;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        align-items: flex-start;
+      }
     </style>
   </head>
   <body>
-    <div class="flex_container">
-      <div class="flex-child" id="flex_small">
+    <div class="flex_container1">
+      <div class="flex-child1" id="flex_small">
         <img src="../images/space_blue.jpeg" alt="Space">
       </div>
-      <div class="flex-child">
+      <div class="flex-child1">
         <img src="../images/space_gradient.jpeg" alt="Stars">
       </div>
-      <div class="flex-child" id="flex_big">
+      <div class="flex-child1" id="flex_big">
         <img src="../images/space_justStars.jpeg" alt="starry sky">
       </div>
-      <div class="flex-child">
+      <div class="flex-child1">
+        <img src="../images/space_nova.jpeg" alt="nova">
+      </div>
+    </div>
+
+    <br><br>
+
+    <div class="flex_container2">
+      <div class="flex_child2" id="flex_small2">
+        <img src="../images/mount_fuji.jpeg" alt="mountain">
+      </div>
+      <div class="flex_child2">
+        <img src="../images/neon_street.jpeg" alt="street">
+      </div>
+      <div class="flex_child2" id="flex_big2">
+        <img src="../images/japanese_gate.jpeg" alt="gate">
+      </div>
+    </div>
+
+    <br><br>
+
+    <div class="flex_container3">
+      <div class="flex_child3" id="flex_small3">
+        <img src="../images/mount_fuji.jpeg" alt="mountain">
+      </div>
+      <div class="flex_child3">
+        <img src="../images/neon_street.jpeg" alt="street">
+      </div>
+      <div class="flex_child3" id="flex_big3">
+        <img src="../images/japanese_gate.jpeg" alt="gate">
+      </div>
+    </div>
+
+    <br><br>
+
+    <div class="flex_container4">
+      <div class="flex_child4">
+        <img src="../images/space_blue.jpeg" alt="Space">
+      </div>
+      <div class="flex_child4">
+        <img src="../images/space_gradient.jpeg" alt="Stars">
+      </div>
+      <div class="flex_child4">
+        <img src="../images/space_justStars.jpeg" alt="starry sky">
+      </div>
+      <div class="flex_child4">
         <img src="../images/space_nova.jpeg" alt="nova">
       </div>
     </div>
